Added fundamentals, made changing settings generate new cards instantly, took out unnecessary steps from Choose One mode, and updated Gradle

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -24,6 +24,9 @@
             <item
                 android:id="@+id/action_setMode_chooseOne"
                 android:title="@string/mode_chooseOne" />
+            <item
+                android:id="@+id/action_setMode_fundamentals"
+                android:title="@string/mode_fundamentals" />
         </menu>
     </item>
     <item
