--- a/app/src/main/res/xml/fundamentals.xml
+++ b/app/src/main/res/xml/fundamentals.xml
@@ -38,12 +38,12 @@
         <element name="Obstacle" />
         <element name="Opportunity" />
         <element name="Penalty" />
-        <element name="Permanence" />
         <element name="Place" />
         <element name="Player" />
         <element name="Problem" />
         <element name="Randomness" />
         <element name="Repetition" />
+        <element name="Replayability" />
         <element name="Resource" />
         <element name="Reward" />
         <element name="Rule" />
