Made buttons transparent so text under them can be read

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
+        android:alpha="0.8"
         app:backgroundTint="@color/colorPrimary"
         app:layout_anchor="@+id/include"
         app:layout_anchorGravity="bottom|end"
@@ -48,6 +49,7 @@
         android:layout_width="118dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
+        android:alpha="0.8"
         app:backgroundTint="@color/colorCyan"
         app:layout_anchor="@+id/include"
         app:layout_anchorGravity="bottom|center"
@@ -58,6 +60,7 @@
         android:layout_width="118dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
+        android:alpha="0.8"
         app:backgroundTint="@color/colorGreen"
         app:layout_anchor="@+id/include"
         app:layout_anchorGravity="bottom|start"
