--- a/app/src/main/res/xml/fundamentals.xml
+++ b/app/src/main/res/xml/fundamentals.xml
@@ -21,6 +21,7 @@
         <element name="Enemy" />
         <element name="Failure" />
         <element name="Feedback" />
+        <element name="Future" />
         <element name="Goal" />
         <element name="Ground" />
         <element name="Hazard" />
@@ -36,6 +37,7 @@
         <element name="Movement" />
         <element name="Obstacle" />
         <element name="Opportunity" />
+        <element name="Past" />
         <element name="Penalty" />
         <element name="Place" />
         <element name="Player" />
